[package]
name = "terramodulus-ferricia-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "ferricia_engine"
crate-type = ["cdylib"]

[dependencies]
opus = "0.3.0"
flac = "0.5.0"
sdl3 = { version = "0.14.27", features = ["build-from-source", "build-from-source-unix-console"] }
ode = { path = "ode" }

[build-dependencies]

