[package]
name = "terramodulus-ferricia-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "ferricia_engine"
crate-type = ["cdylib"]

[dependencies]
opusic-sys = "0.5.5"
libflac-sys = "0.3"
sdl3 = { version = "0.14.27", features = ["build-from-source"] }
ode-sys = { path = "ode" }
openal-soft-sys = { path = "openal-soft" }
gl = "0.14.0"
opencl3 = "0.12.0"
icu = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
futures = "0.3.30"
chrono = "0.4.0"
rand = "0.9.1"
crossbeam = "0.8"
sevenz-rust = { version = "0.6.0", features = ["compress"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tokio = { version = "1.37.0", features = ["full"] }
fs4 = "0.13.1"
getset = "0.1.2"
zip = "3.0.0"
sysinfo = "0.35.1"
jni = "0.21.1"
